--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,6 @@ services:
       driver: syslog
     restart: on-failure
     volumes:
-      - ${PWD}/api02:/home/
+      - ${PWD}/api02:/home/    
+    networks:
+      - production
