--- a/api02/docker-compose.yml
+++ b/api02/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 services:
   api01:
-    image: nodejs:latest
+    image: node:14-alpine
     container_name: api02
     logging:
       driver: syslog
