--- a/api01/docker-compose.yml
+++ b/api01/docker-compose.yml
@@ -6,5 +6,7 @@ services:
     logging:
       driver: syslog
     restart: on-failure
+    volumes:
+      - ${PWD}/api01:/home/    
     networks:
       - production
