--- a/api01/docker-compose.yml
+++ b/api01/docker-compose.yml
@@ -8,3 +8,7 @@ services:
     restart: on-failure
     networks:
       - production
+networks:
+  production:
+    name: producao
+    driver: bridge 
