--- a/api02/docker-compose.yml
+++ b/api02/docker-compose.yml
@@ -10,3 +10,7 @@ services:
       - ${PWD}/api02:/home/    
     networks:
       - production
+networks:
+  production:
+    name: producao
+    driver: bridge 
